--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ development: &DEVELOPMENT
   adapter: postgresql
   database: adopt_a_thing_development
   host: localhost
-  password:
-  username: postgres
+  password: devme
+  username: dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
